GNOME Bugzilla – Bug 733253
UPnP/DLeyna bug fixes
Last modified: 2014-07-17 15:16:19 UTC
.
Created attachment 280837 [details] [review] build: Enable dleyna plugin in distcheck
Created attachment 280838 [details] [review] help: Add mention of DLeyna plugin
Created attachment 280839 [details] [review] plugins: Remove UPnP plugin It's been replaced by the DLeyna-based plugin
Created attachment 280840 [details] [review] dleyna: Remove constant warnings when browsing Properties requested by grilo but not support by DLeyna produced a warning. For every item!
Created attachment 280841 [details] [review] dleyna: ChildCount is an int32, not a uint32 As verified inspecting the dleyna-server source code.
Attachment 280837 [details] pushed as 31ef3fe - build: Enable dleyna plugin in distcheck Attachment 280838 [details] pushed as 1ed1767 - help: Add mention of DLeyna plugin Attachment 280839 [details] pushed as 1f7e27c - plugins: Remove UPnP plugin Attachment 280840 [details] pushed as cbe9ff5 - dleyna: Remove constant warnings when browsing Attachment 280841 [details] pushed as 555e1f1 - dleyna: ChildCount is an int32, not a uint32