dleyna: Remove constant warnings when browsing

Properties requested by grilo but not support by DLeyna produced a
warning. For every item!

https://bugzilla.gnome.org/show_bug.cgi?id=733253